--- a/src/main/resources/sqls.properties
+++ b/src/main/resources/sqls.properties
@@ -189,3 +189,19 @@ phoenix_credit_status_amtchg=UPSERT into "GBU_DWD_CREDIT"."DWD_EC_CREDIT_STATUS"
 phoenix_credit_status_endtimechg=UPSERT into "GBU_DWD_CREDIT"."DWD_EC_CREDIT_STATUS"("credit_code","last_mod_time_amt","last_mod_time_endtime","i1"."comp_code","i1"."total_amt","i1"."get_amt","i1"."funding_comp_role","i1"."credit_use","i1"."credit_status","i1"."confirm_status","i1"."end_date") \
                select "credit_code","last_mod_time_amt",TO_TIMESTAMP(?),"i1"."comp_code","i1"."total_amt","i1"."get_amt","i1"."funding_comp_role","i1"."credit_use","i1"."credit_status","i1"."confirm_status",TO_TIMESTAMP(?) \
                from "GBU_DWD_CREDIT"."DWD_EC_CREDIT_STATUS" where "credit_code"=? order by "last_mod_time_amt" desc,"last_mod_time_endtime" desc limit 1 
+
+##初始化授信创建成功后的数据
+init_credit_status_create=UPSERT into "GBU_DWD_CREDIT"."DWD_EC_CREDIT_STATUS"("credit_code","last_mod_time_amt","last_mod_time_endtime","i1"."comp_code","i1"."total_amt","i1"."get_amt","i1"."funding_comp_role","i1"."credit_use","i1"."credit_status","i1"."confirm_status","i1"."end_date") \
+select a."bill_code" ,b."approval_date",b."approval_date",a."comp_code",a."total_amt",a."total_amt",a."funding_comp_role",a."credit_use",a."credit_status",a."confirm_status",a."end_date" from \
+(SELECT "i1"."bill_code","i1"."comp_code","i1"."total_amt","i1"."funding_comp_role","i1"."credit_use","i1"."credit_status","i1"."confirm_status","i1"."end_date" FROM "GBU_ODS_CREDIT"."ODS_T_EC_CREDIT_INFO" \
+WHERE "i1"."credit_status"='70' and "i1"."confirm_status"='25' and "i1"."yn"='1')a \
+inner join \
+(select "i1"."source_code","i1"."approval_date" from "GBU_ODS_CREDIT"."ODS_T_EC_CREDIT_AUDIT" where "i1"."oper_type"='3' and "i1"."after_status"='70' and "i1"."yn"='1')b \
+on a."bill_code"=b."source_code"
+##
+init_get_credit_chg= select b."credit_code",a."approval_date",b."cchg_type",b."before_amt",b."after_amt",b."diff_date" from \
+(select "i1"."source_code","i1"."approval_date" from "GBU_ODS_CREDIT"."ODS_T_EC_CREDIT_AUDIT" where "i1"."oper_type"='3' and "i1"."after_status"='70' and "i1"."yn"='1' )a \
+left join \
+(select "i1"."bill_code","i1"."credit_code","i1"."cchg_type","i1"."before_amt","i1"."after_amt","i1"."diff_date" from "GBU_ODS_CREDIT"."ODS_T_EC_CREDIT_CHG" where "i1"."cchg_status"='70' and "i1"."yn"='1')b \
+on a."source_code"=b."bill_code" \
+order by a."approval_date" 
