--- a/src/main/resources/sqls.properties
+++ b/src/main/resources/sqls.properties
@@ -111,14 +111,24 @@ phoenix_credit_chg_i=UPSERT into "GBU_ODS_CREDIT"."ODS_T_EC_CREDIT_CHG"("id" ,\
                "i2"."auth" )\
                 values (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,TO_TIMESTAMP (?),?,?,?,?,TO_TIMESTAMP (?),?,?,?,TO_TIMESTAMP (?),?,?,?,?,?,?)
 
-phoenix_credit_status=UPSERT into "GBU_DWD_CREDIT"."DWD_EC_CREDIT_STATUS"("credit_code","last_mod_time_amt","last_mod_time_endtime","i1"."comp_code","i1"."total_amt","i1"."get_amt","i1"."funding_comp_role","i1"."credit_use","i1"."credit_status","i1"."confirm_status","i1"."end_date") \
-select ? ,TO_TIMESTAMP(?),TO_TIMESTAMP(?),"i1"."comp_code","i1"."total_amt","i1"."total_amt","i1"."funding_comp_role","i1"."credit_use","i1"."credit_status","i1"."confirm_status","i1"."end_date" from "GBU_ODS_CREDIT"."ODS_T_EC_CREDIT_INFO" where "i1"."bill_code"=? \
-and "credit_status"='70' and "confirm_status"='25' and "yn"='1'
+phoenix_credit_status=UPSERT into "GBU_DWD_CREDIT"."DWD_EC_CREDIT_STATUS"("credit_code","last_mod_time_amt","last_mod_time_endtime","i1"."comp_code","i1"."total_amt","i1"."get_amt","i1"."funding_comp_role","i1"."credit_use","i1"."credit_status","i1"."confirm_status","i1"."start_date","i1"."end_date") \
+select ? ,TO_TIMESTAMP(?),TO_TIMESTAMP(?),"i1"."comp_code","i1"."total_amt","i1"."total_amt","i1"."funding_comp_role","i1"."credit_use","i1"."credit_status","i1"."confirm_status",\
+case when "i1"."start_date"<=TO_TIMESTAMP(?) then TO_TIMESTAMP(?) else "i1"."start_date" end ,"i1"."start_date","i1"."end_date" \
+from "GBU_ODS_CREDIT"."ODS_T_EC_CREDIT_INFO" where "i1"."bill_code"=?  order by "id" desc limit 1 
 
-phoenix_credit_count=UPSERT INTO "GBU_DWS_CREDIT"."DWS_EC_CREDIT_COUNT" \
-        ("comp_code","cnt_date","i1"."cnt","i1"."amt","i1"."zjf_pt_cnt","i1"."zjf_pt_amt","i1"."zjf_yh_cnt","i1"."zjf_yh_amt","i1"."shy_xh_cnt","i1"."shy_xh_amt","i1"."shy_dy_cnt","i1"."shy_dy_amt") \
-        select b."comp_code",to_date(?),sum(shy_xh_cnt)+sum(shy_dy_cnt),sum(shy_xh_amt)+sum(shy_dy_amt),sum(zjf_pt_cnt),sum(zjf_pt_amt),sum(zjf_yh_cnt),sum(zjf_yh_amt),sum(shy_xh_cnt),sum(shy_xh_amt),sum(shy_dy_cnt),sum(shy_dy_amt) from \
-  (\
+phoenix_credit_status_amtchg=UPSERT into "GBU_DWD_CREDIT"."DWD_EC_CREDIT_STATUS"("credit_code","last_mod_time_amt","last_mod_time_endtime","i1"."comp_code","i1"."total_amt","i1"."get_amt","i1"."funding_comp_role","i1"."credit_use","i1"."credit_status","i1"."confirm_status","i1"."start_date","i1"."end_date") \
+select "credit_code",TO_TIMESTAMP(?),"last_mod_time_endtime","i1"."comp_code",?,?,"i1"."funding_comp_role","i1"."credit_use","i1"."credit_status","i1"."confirm_status","i1"."start_date","i1"."end_date" \
+from "GBU_DWD_CREDIT"."DWD_EC_CREDIT_STATUS" where "credit_code"=? order by "last_mod_time_endtime" desc,"last_mod_time_amt" desc limit 1 
+
+phoenix_credit_status_endtimechg=UPSERT into "GBU_DWD_CREDIT"."DWD_EC_CREDIT_STATUS"("credit_code","last_mod_time_amt","last_mod_time_endtime","i1"."comp_code","i1"."total_amt","i1"."get_amt","i1"."funding_comp_role","i1"."credit_use","i1"."credit_status","i1"."confirm_status","i1"."start_date","i1"."end_date") \
+select "credit_code","last_mod_time_amt",TO_TIMESTAMP(?),"i1"."comp_code","i1"."total_amt","i1"."get_amt","i1"."funding_comp_role","i1"."credit_use","i1"."credit_status","i1"."confirm_status","i1"."start_date",TO_TIMESTAMP(?) \
+from "GBU_DWD_CREDIT"."DWD_EC_CREDIT_STATUS" where "credit_code"=? order by "last_mod_time_amt" desc,"last_mod_time_endtime" desc limit 1 
+
+phoenix_credit_count=UPSERT INTO "GBU_DWS_CREDIT"."DWS_EC_CREDIT_COUNT" ( \
+"comp_code","cnt_date","i1"."cnt","i1"."amt","i1"."zjf_pt_cnt","i1"."zjf_pt_amt","i1"."zjf_yh_cnt","i1"."zjf_yh_amt","i1"."shy_xh_cnt","i1"."shy_xh_amt","i1"."shy_dy_cnt","i1"."shy_dy_amt") \
+select b."comp_code",to_date(?),round(sum(shy_xh_cnt)+sum(shy_dy_cnt),2),round(sum(shy_xh_amt)+sum(shy_dy_amt),2),round(sum(zjf_pt_cnt),2),round(sum(zjf_pt_amt),2),round(sum(zjf_yh_cnt),2),\
+round(sum(zjf_yh_amt),2),round(sum(shy_xh_cnt),2),round(sum(shy_xh_amt),2),round(sum(shy_dy_cnt),2),round(sum(shy_dy_amt),2) from \
+(\
 select a."comp_code", \
 case when a."funding_comp_role"='1' then count(1) else 0 end zjf_pt_cnt,\
 case when a."funding_comp_role"='1' then sum(a."get_amt") else 0.00 end zjf_pt_amt,\
@@ -131,12 +141,12 @@ case when a."credit_use"='8' then sum(a."get_amt") else 0.00 end shy_dy_amt \
 from\
 (select t1."credit_code",t1."comp_code",t1."get_amt",t1."funding_comp_role",t1."credit_use" from \
 (select "credit_code","last_mod_time_amt","i1"."comp_code","i1"."get_amt","i1"."funding_comp_role","i1"."credit_use" from "GBU_DWD_CREDIT"."DWD_EC_CREDIT_STATUS" \
-where "i1"."comp_code" = ? and ("last_mod_time_amt" between TO_TIMESTAMP(?) and TO_TIMESTAMP(?)) )t1 \
+where "i1"."comp_code"=? and ("last_mod_time_amt" between TO_TIMESTAMP(?) and TO_TIMESTAMP(?)) )t1 \
 inner join \
-(select "credit_code","last_mod_time_amt" from "GBU_DWD_CREDIT"."DWD_EC_CREDIT_STATUS" where "i1"."comp_code" =? \
+(select "credit_code","last_mod_time_amt" from "GBU_DWD_CREDIT"."DWD_EC_CREDIT_STATUS" where "i1"."comp_code" = ? \
 and ("last_mod_time_amt" between TO_TIMESTAMP(?) and TO_TIMESTAMP(?)) group by "credit_code","last_mod_time_amt")t2 \
 on t1."credit_code"=t2."credit_code" and t1."last_mod_time_amt"=t2."last_mod_time_amt" \
-)a group by a."comp_code",a."funding_comp_role",a."credit_use"\
+)a group by a."comp_code",a."funding_comp_role",a."credit_use" \
 )b group by b."comp_code" 
 
 phoenix_credit_count_bl=UPSERT INTO "GBU_DWS_CREDIT"."DWS_EC_CREDIT_COUNT" ("comp_code","cnt_date","i1"."zjf_pt_amt_bl","i1"."zjf_yh_amt_bl","i1"."shy_xh_amt_bl","i1"."shy_dy_amt_bl") \
@@ -180,28 +190,26 @@ phoenix_credit_valid_bl=UPSERT INTO "GBU_DWS_CREDIT"."DWS_EC_CREDIT_VALID" ("com
                case when "i1"."yx"=0.00 or "i1"."yx" is null then null else ROUND("i1"."shx"/"i1"."yx",2) end \
                 from \
                 "GBU_DWS_CREDIT"."DWS_EC_CREDIT_VALID" where "comp_code" =? \
-                and "cnt_date"=to_date(?) 
-
-phoenix_credit_status_amtchg=UPSERT into "GBU_DWD_CREDIT"."DWD_EC_CREDIT_STATUS"("credit_code","last_mod_time_amt","last_mod_time_endtime","i1"."comp_code","i1"."total_amt","i1"."get_amt","i1"."funding_comp_role","i1"."credit_use","i1"."credit_status","i1"."confirm_status","i1"."end_date") \
-               select "credit_code",TO_TIMESTAMP(?),"last_mod_time_endtime","i1"."comp_code",?,?,"i1"."funding_comp_role","i1"."credit_use","i1"."credit_status","i1"."confirm_status","i1"."end_date"  \
-               from "GBU_DWD_CREDIT"."DWD_EC_CREDIT_STATUS" where "credit_code"=? order by "last_mod_time_endtime" desc,"last_mod_time_amt" desc limit 1
-
-phoenix_credit_status_endtimechg=UPSERT into "GBU_DWD_CREDIT"."DWD_EC_CREDIT_STATUS"("credit_code","last_mod_time_amt","last_mod_time_endtime","i1"."comp_code","i1"."total_amt","i1"."get_amt","i1"."funding_comp_role","i1"."credit_use","i1"."credit_status","i1"."confirm_status","i1"."end_date") \
-               select "credit_code","last_mod_time_amt",TO_TIMESTAMP(?),"i1"."comp_code","i1"."total_amt","i1"."get_amt","i1"."funding_comp_role","i1"."credit_use","i1"."credit_status","i1"."confirm_status",TO_TIMESTAMP(?) \
-               from "GBU_DWD_CREDIT"."DWD_EC_CREDIT_STATUS" where "credit_code"=? order by "last_mod_time_amt" desc,"last_mod_time_endtime" desc limit 1 
+                and "cnt_date"=to_date(?)
 
 ##初始化授信创建成功后的数据
-init_credit_status_create=UPSERT into "GBU_DWD_CREDIT"."DWD_EC_CREDIT_STATUS"("credit_code","last_mod_time_amt","last_mod_time_endtime","i1"."comp_code","i1"."total_amt","i1"."get_amt","i1"."funding_comp_role","i1"."credit_use","i1"."credit_status","i1"."confirm_status","i1"."end_date") \
-select a."bill_code" ,b."approval_date",b."approval_date",a."comp_code",a."total_amt",a."total_amt",a."funding_comp_role",a."credit_use",a."credit_status",a."confirm_status",a."end_date" from \
+init_credit_status_create=UPSERT into "GBU_DWD_CREDIT"."DWD_EC_CREDIT_STATUS"("credit_code","last_mod_time_amt","last_mod_time_endtime","i1"."comp_code","i1"."total_amt","i1"."get_amt","i1"."funding_comp_role","i1"."credit_use","i1"."credit_status","i1"."confirm_status","i1"."start_date","i1"."end_date") \
+select a."bill_code" ,b."approval_date",b."approval_date",a."comp_code",a."total_amt",a."total_amt",a."funding_comp_role",a."credit_use",a."credit_status",a."confirm_status",\
+case when "i1"."start_date"<=b."approval_date" then TO_TIMESTAMP(substr(to_char(b."approval_date"),1,10)||' 00:00:00') else "i1"."start_date" end,a."end_date" from \
 (SELECT "i1"."bill_code","i1"."comp_code","i1"."total_amt","i1"."funding_comp_role","i1"."credit_use","i1"."credit_status","i1"."confirm_status","i1"."end_date" FROM "GBU_ODS_CREDIT"."ODS_T_EC_CREDIT_INFO" \
 WHERE "i1"."credit_status"='70' and "i1"."confirm_status"='25' and "i1"."yn"='1')a \
 inner join \
-(select "i1"."source_code","i1"."approval_date" from "GBU_ODS_CREDIT"."ODS_T_EC_CREDIT_AUDIT" where "i1"."oper_type"='3' and "i1"."after_status"='70' and "i1"."yn"='1')b \
-on a."bill_code"=b."source_code"
-##
+(select "i1"."source_code","i1"."approval_date" from "GBU_ODS_CREDIT"."ODS_T_EC_CREDIT_AUDIT" where "i1"."oper_type"='2' and "i1"."after_status"='70' and "i1"."yn"='1')b \
+on a."bill_code"=b."source_code" 
+##初始化授信修改后的信息
 init_get_credit_chg= select b."credit_code",a."approval_date",b."cchg_type",b."before_amt",b."after_amt",b."diff_date" from \
 (select "i1"."source_code","i1"."approval_date" from "GBU_ODS_CREDIT"."ODS_T_EC_CREDIT_AUDIT" where "i1"."oper_type"='3' and "i1"."after_status"='70' and "i1"."yn"='1' )a \
 left join \
 (select "i1"."bill_code","i1"."credit_code","i1"."cchg_type","i1"."before_amt","i1"."after_amt","i1"."diff_date" from "GBU_ODS_CREDIT"."ODS_T_EC_CREDIT_CHG" where "i1"."cchg_status"='70' and "i1"."yn"='1')b \
 on a."source_code"=b."bill_code" \
 order by a."approval_date" 
+
+##初始化授信修改后的信息
+init_get_credit_count= select a."comp_code",a."last_mod_date_amt" from (\
+select "i1"."comp_code",TO_DATE(substr(to_char("last_mod_time_amt"),1,10)) as "last_mod_date_amt" \
+from "GBU_DWD_CREDIT"."DWD_EC_CREDIT_STATUS")a group by a."last_mod_date_amt",a."comp_code"
