--- a/src/main/resources/sqls.properties
+++ b/src/main/resources/sqls.properties
@@ -114,7 +114,7 @@ phoenix_credit_chg_i=UPSERT into "GBU_ODS_CREDIT"."ODS_T_EC_CREDIT_CHG"("id" ,\
 phoenix_credit_status=UPSERT into "GBU_DWD_CREDIT"."DWD_EC_CREDIT_STATUS"("credit_code","last_mod_time_amt","last_mod_time_endtime","i1"."comp_code","i1"."total_amt","i1"."get_amt","i1"."funding_comp_role","i1"."credit_use","i1"."credit_status","i1"."confirm_status","i1"."start_date","i1"."end_date") \
 select ? ,TO_TIMESTAMP(?),TO_TIMESTAMP(?),"i1"."comp_code","i1"."total_amt","i1"."total_amt","i1"."funding_comp_role","i1"."credit_use","i1"."credit_status","i1"."confirm_status",\
 case when "i1"."start_date"<=TO_TIMESTAMP(?) then TO_TIMESTAMP(?) else "i1"."start_date" end ,"i1"."start_date","i1"."end_date" \
-from "GBU_ODS_CREDIT"."ODS_T_EC_CREDIT_INFO" where "i1"."bill_code"=?  order by "id" desc limit 1 
+from "GBU_ODS_CREDIT"."ODS_T_EC_CREDIT_INFO" where "i1"."bill_code"=? and "i1"."yn"='1' order by "id" desc limit 1 
 
 phoenix_credit_status_amtchg=UPSERT into "GBU_DWD_CREDIT"."DWD_EC_CREDIT_STATUS"("credit_code","last_mod_time_amt","last_mod_time_endtime","i1"."comp_code","i1"."total_amt","i1"."get_amt","i1"."funding_comp_role","i1"."credit_use","i1"."credit_status","i1"."confirm_status","i1"."start_date","i1"."end_date") \
 select "credit_code",TO_TIMESTAMP(?),"last_mod_time_endtime","i1"."comp_code",?,?,"i1"."funding_comp_role","i1"."credit_use","i1"."credit_status","i1"."confirm_status","i1"."start_date","i1"."end_date" \
