--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,26 +1,31 @@
-# ???????? ,file
-log4j.rootLogger=INFO, stdout, file
+### set log levels ###
+log4j.rootLogger = INFO , console , debug , error
 
-# ??????LOG??(??QuartzINFO??)??
-log4j.logger.org.quartz=WARN, stdout 
+### console ###
+log4j.appender.console = org.apache.log4j.ConsoleAppender
+log4j.appender.console.Target = System.out
+log4j.appender.console.layout = org.apache.log4j.PatternLayout
+log4j.appender.console.layout.ConversionPattern = %-d{yyyy-MM-dd HH\:mm\:ss} [%p]-[%c] %m%n
+
+### log file ###
+log4j.appender.debug = org.apache.log4j.DailyRollingFileAppender
+log4j.appender.debug.File = ../logs/dw_info.log
+log4j.appender.debug.Append = true
+log4j.appender.debug.Threshold = INFO
+log4j.appender.debug.layout = org.apache.log4j.PatternLayout
+log4j.appender.debug.layout.ConversionPattern = %-d{yyyy-MM-dd HH\:mm\:ss} [%p]-[%c] %m%n
+
+### exception ###
+log4j.appender.error = org.apache.log4j.DailyRollingFileAppender
+log4j.appender.error.File = ../logs/dw_error.log
+log4j.appender.error.Append = true
+log4j.appender.error.Threshold = ERROR
+log4j.appender.error.layout = org.apache.log4j.PatternLayout
+log4j.appender.error.layout.ConversionPattern = %-d{yyyy-MM-dd HH\:mm\:ss} [%p]-[%c] %m%n
+
+
+###需要声明，然后下方才可以使druid sql输出，否则会抛出log4j.error.key not found
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=[%-5p] %d{yyyy-MM-dd HH:mm:ss,SSS} method:%l%n%m%n
-log4j.logger.stdout.Encoding=UTF-8
-
-# Output to the File
-log4j.appender.file=org.apache.log4j.FileAppender
-log4j.appender.file.File=G:/opt/logs/dw-gbu.log
-log4j.appender.file.layout=org.apache.log4j.PatternLayout
-log4j.appender.file.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]  %m%n
-log4j.logger.file.Encoding=UTF-8
-
-
-log4j.logger=dw
-log4j.appender.dw=org.apache.log4j.FileAppender
-log4j.appender.dw.File=G:/opt/logs/dw-gbu.log
-log4j.appender.dw.layout=org.apache.log4j.PatternLayout
-log4j.appender.dw.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]
-log4j.logger.dw.Encoding=UTF-8
-
-
+log4j.appender.stdout.layout.ConversionPattern=%d{ISO8601} %l %c%n%p: %m%n
