--- a/src/main/resources/sqls.properties
+++ b/src/main/resources/sqls.properties
@@ -124,19 +124,30 @@ phoenix_credit_status_endtimechg=UPSERT into "GBU_DWD_CREDIT"."DWD_EC_CREDIT_STA
 select "credit_code","last_mod_time_amt",TO_TIMESTAMP(?),"i1"."comp_code","i1"."total_amt","i1"."get_amt","i1"."funding_comp_role","i1"."credit_use","i1"."credit_status","i1"."confirm_status","i1"."start_date",TO_TIMESTAMP(?) \
 from "GBU_DWD_CREDIT"."DWD_EC_CREDIT_STATUS" where "credit_code"=? order by "last_mod_time_amt" desc,"last_mod_time_endtime" desc limit 1 
 
-phoenix_credit_count=UPSERT INTO "GBU_DWS_CREDIT"."DWS_EC_CREDIT_COUNT" ( \
-"comp_code","cnt_date","i1"."cnt","i1"."amt","i1"."zjf_pt_cnt","i1"."zjf_pt_amt","i1"."zjf_yh_cnt","i1"."zjf_yh_amt","i1"."shy_xh_cnt","i1"."shy_xh_amt","i1"."shy_dy_cnt","i1"."shy_dy_amt") \
-select b."comp_code",to_date(?),round(sum(shy_xh_cnt)+sum(shy_dy_cnt),2),round(sum(shy_xh_amt)+sum(shy_dy_amt),2),round(sum(zjf_pt_cnt),2),round(sum(zjf_pt_amt),2),round(sum(zjf_yh_cnt),2),\
-round(sum(zjf_yh_amt),2),round(sum(shy_xh_cnt),2),round(sum(shy_xh_amt),2),round(sum(shy_dy_cnt),2),round(sum(shy_dy_amt),2) from \
+phoenix_credit_count_cnt=UPSERT INTO "GBU_DWS_CREDIT"."DWS_EC_CREDIT_COUNT" ("comp_code","cnt_date","i1"."cnt","i1"."zjf_pt_cnt","i1"."zjf_yh_cnt","i1"."shy_xh_cnt","i1"."shy_dy_cnt") \
+select b."comp_code",to_date(?),round(sum(shy_xh_cnt)+sum(shy_dy_cnt),2),round(sum(zjf_pt_cnt),2),round(sum(zjf_yh_cnt),2),round(sum(shy_xh_cnt),2),round(sum(shy_dy_cnt),2) from \
 (\
 select a."comp_code", \
 case when a."funding_comp_role"='1' then count(1) else 0 end zjf_pt_cnt,\
-case when a."funding_comp_role"='1' then sum(a."get_amt") else 0.00 end zjf_pt_amt,\
 case when a."funding_comp_role"='2' then count(1) else 0 end zjf_yh_cnt,\
-case when a."funding_comp_role"='2' then sum(a."get_amt") else 0.00 end zjf_yh_amt,\
 case when a."credit_use"='7' then count(1) else 0 end shy_xh_cnt,\
+case when a."credit_use"='8' then count(1) else 0 end shy_dy_cnt \
+FROM\
+(SELECT "i1"."comp_code","credit_code","i1"."funding_comp_role","i1"."credit_use" FROM "GBU_DWD_CREDIT"."DWD_EC_CREDIT_STATUS" \
+where "i1"."comp_code"=? and ("last_mod_time_amt" between TO_TIMESTAMP(?) and TO_TIMESTAMP(?))  \
+GROUP BY "i1"."comp_code","credit_code","i1"."funding_comp_role","i1"."credit_use" \
+) a \
+group by a."comp_code",a."funding_comp_role",a."credit_use"  \
+)b \
+group by b."comp_code" 
+
+phoenix_credit_count_amt=UPSERT INTO "GBU_DWS_CREDIT"."DWS_EC_CREDIT_COUNT" ("comp_code","cnt_date","i1"."amt","i1"."zjf_pt_amt","i1"."zjf_yh_amt","i1"."shy_xh_amt","i1"."shy_dy_amt") \
+select b."comp_code",to_date(?),round(sum(shy_xh_amt)+sum(shy_dy_amt),2),round(sum(zjf_pt_amt),2),round(sum(zjf_yh_amt),2),round(sum(shy_xh_amt),2),round(sum(shy_dy_amt),2) from \
+(\
+select a."comp_code", \
+case when a."funding_comp_role"='1' then sum(a."get_amt") else 0.00 end zjf_pt_amt, \
+case when a."funding_comp_role"='2' then sum(a."get_amt") else 0.00 end zjf_yh_amt, \
 case when a."credit_use"='7' then sum(a."get_amt") else 0.00 end shy_xh_amt,\
-case when a."credit_use"='8' then count(1) else 0 end shy_dy_cnt,\
 case when a."credit_use"='8' then sum(a."get_amt") else 0.00 end shy_dy_amt \
 from\
 (select t1."credit_code",t1."comp_code",t1."get_amt",t1."funding_comp_role",t1."credit_use" from \
@@ -146,8 +157,8 @@ inner join \
 (select "credit_code","last_mod_time_amt" from "GBU_DWD_CREDIT"."DWD_EC_CREDIT_STATUS" where "i1"."comp_code" = ? \
 and ("last_mod_time_amt" between TO_TIMESTAMP(?) and TO_TIMESTAMP(?)) group by "credit_code","last_mod_time_amt" ORDER BY "last_mod_time_amt" DESC)t2 \
 on t1."credit_code"=t2."credit_code" and t1."last_mod_time_amt"=t2."last_mod_time_amt" \
-)a group by a."comp_code",a."funding_comp_role",a."credit_use" \
-)b group by b."comp_code" 
+)a group by a."comp_code",a."funding_comp_role",a."credit_use"\
+)b group by b."comp_code"
 
 phoenix_credit_count_bl=UPSERT INTO "GBU_DWS_CREDIT"."DWS_EC_CREDIT_COUNT" ("comp_code","cnt_date","i1"."zjf_pt_amt_bl","i1"."zjf_yh_amt_bl","i1"."shy_xh_amt_bl","i1"."shy_dy_amt_bl") \
                select "comp_code",to_date(?),\
